--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 purchase, and many more.</p>
 
         </article>
-        <video class="vid-sup" src="vids/stu.mp4" autoplay loop muted>
+        <video class="vid-sup" src="vids/stus.mp4" autoplay loop muted>
     </div>
 
 
@@ -54,12 +54,12 @@
 
     <div class="wrapper">
         <article class="img-info">
-            <h2>Machine Learning Tinder Bot</h2>
+            <h2>Machine Learning tinder Bot</h2>
             <p>A Python bot that uses Tensorflow to train a VGG16 algorithm to detect hair color and then use this model
-                to swipe automatically on Tinder for a user depending on their hair color preference.</p>
+                to swipe automatically on tinder for a user depending on their hair color preference.</p>
 
         </article>
-        <video class="vid-sup" src="vids/tind.mp4" autoplay loop muted>
+        <video class="vid-sup" src="vids/tin.mp4" autoplay loop muted>
     </div>
 
     <div class="divider"></div>
@@ -72,7 +72,7 @@
                 process.</p>
 
         </article>
-        <video class="vid-sup" src="vids/spoti.mp4" autoplay loop muted>
+        <video class="vid-sup" src="vids/spot.mp4" autoplay loop muted>
     </div>
 
     <div class="divider"></div>
