added node.js uniflash project

--- a/index.html
+++ b/index.html
@@ -77,6 +77,19 @@
 
     <div class="divider"></div>
 
+    <div class="wrapper">
+        <article class="img-info">
+            <h2>UniFlash</h2>
+            <p>A Node.js app built to create flashcards based on user input via API from a chatbot. Created in a team of 4
+                people, where I was responsible for the backend and the API integration. Built with persistent databases 
+                to keep track of all flashcards assigned to user.</p>
+
+        </article>
+        <video class="vid-sup" src="vids/uniflash.mp4" autoplay loop muted>
+    </div>
+
+    <div class="divider"></div>
+
 </body>
 
 </html>
